--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=https://cucubetgo6.com/">
+    <meta http-equiv="refresh" content="0;url=https://cucubetyes3.com/">
     <title>Redirecting...</title>
     <style>
         body {
@@ -45,7 +45,7 @@
     <div id="content">
         <img src="loading.gif" alt="Loading..." id="loading-img">
         <p>Mohon tunggu sebentar, sedang menuju situs pilihan Anda...</p>
-        <p>Jika tidak diarahkan secara otomatis, <a href="https://cucubetgo6.com/">klik di sini</a>.</p>
+        <p>Jika tidak diarahkan secara otomatis, <a href="https://cucubetyes3.com/">klik di sini</a>.</p>
     </div>
 </body>
 </html>
